Removed grayed out side gutters from content. Resized many things to adjust to new page size. Fixed overflow-x problem.

--- a/src/client/css/app.css
+++ b/src/client/css/app.css
@@ -1,4 +1,4 @@
 body {
-    background-color: #d8e3e2 !important;
+    background-color: #dee7e5 !important;
     font-family: Montserrat,Lato,Helvetica,Arial,sans-serif !important;
 }
